--- a/Makefile.am
+++ b/Makefile.am
@@ -23,72 +23,424 @@
 
 # Process this file with automake to produce Makefile.in.
 
-docdir = $(LIBTIFF_DOCDIR)
+AUTOMAKE_OPTIONS = 1.11 color-tests parallel-tests foreign
 
-AUTOMAKE_OPTIONS = 1.11 dist-zip foreign
-ACLOCAL_AMFLAGS = -I m4
+LIBTIFF = $(top_builddir)/libtiff/libtiff.la
 
-docfiles = \
-	ChangeLog \
-	LICENSE.md \
-	README.md \
-	RELEASE-DATE \
-	TODO \
-	VERSION
+# Environment parameters to be used during tests
+TESTS_ENVIRONMENT = \
+	MAKE="$(MAKE)" \
+	MAKEFLAGS="$(MAKEFLAGS)" \
+	MEMCHECK="$(MEMCHECK)"
 
 EXTRA_DIST = \
-	placeholder.h \
-	cmake \
+	$(REFFILES) \
+	$(TESTSCRIPTS) \
+	$(IMAGES_EXTRA_DIST) \
 	CMakeLists.txt \
-	HOWTO-RELEASE \
-	autogen.sh \
-	libtiff-4.pc.in
+	common.sh \
+	TiffSplitTest.cmake \
+	TiffTestCommon.cmake \
+	TiffTest.cmake
 
-if TIFF_DOCS
-dist_doc_DATA = $(docfiles)
+# All of the tests to execute via 'make check'
+if TIFF_TESTS
+TESTS = $(check_PROGRAMS) $(TESTSCRIPTS_TO_RUN)
 endif
 
-distcheck-hook:
-	if [ -x "$(CMAKE)" ]; then \
-	  mkdir $(distdir)/_build/cmake \
-	  && cd $(distdir)/_build/cmake \
-	  && cmake -Dsphinx=OFF ../.. \
-	  && $(MAKE) \
-	  && ctest -V \
-	  && $(MAKE) DESTDIR=../../_inst/cmake install ; \
-	fi
-	rm -rf $(distdir)/_build/cmake
-	rm -rf $(distdir)/_inst/cmake
+# Tests which are expected to fail
+XFAIL_TESTS =
 
-SUBDIRS = port libtiff tools build contrib test doc
+# Extra files which should be cleaned by 'make clean'
+CLEANFILES = test_packbits.tif o-*
 
+JPEG_DEPENDENT_TESTSCRIPTS=\
+	tiff2rgba-quad-tile.jpg.sh \
+	tiff2rgba-ojpeg_zackthecat_subsamp22_single_strip.sh \
+	tiff2rgba-ojpeg_chewey_subsamp21_multi_strip.sh \
+	tiff2rgba-ojpeg_single_strip_no_rowsperstrip.sh \
+	tiff2rgba-32bpp-None-jpeg.sh \
+	tiffcp-32bpp-None-jpeg.sh \
+	tiffcrop-32bpp-None-jpeg.sh
 
-NEW_LIBTIFF_RELEASE_DATE=$(shell date +"%Y%m%d")
+if HAVE_JPEG
+if TIFF_TOOLS
+JPEG_DEPENDENT_CHECK_PROG=raw_decode
+JPEG_DEPENDENT_TESTSCRIPTS_TO_RUN=$(JPEG_DEPENDENT_TESTSCRIPTS)
+endif
+else
+JPEG_DEPENDENT_CHECK_PROG=
+JPEG_DEPENDENT_TESTSCRIPTS_TO_RUN=
+endif
 
-release:
-	@(echo --- Setting release date to $(NEW_LIBTIFF_RELEASE_DATE) and release version to $(LIBTIFF_VERSION) ---)
-	(rm -f $(top_srcdir)/RELEASE-DATE && echo $(NEW_LIBTIFF_RELEASE_DATE) > $(top_srcdir)/RELEASE-DATE)
-	(rm -f $(top_srcdir)/VERSION && echo $(LIBTIFF_VERSION) > $(top_srcdir)/VERSION)
-	(rm -f $(top_builddir)/libtiff/tiffvers.h && sed 's,LIBTIFF_VERSION,$(LIBTIFF_VERSION),;s,LIBTIFF_RELEASE_DATE,$(NEW_LIBTIFF_RELEASE_DATE),;s,LIBTIFF_MAJOR_VERSION,$(LIBTIFF_MAJOR_VERSION),;s,LIBTIFF_MINOR_VERSION,$(LIBTIFF_MINOR_VERSION),;s,LIBTIFF_MICRO_VERSION,$(LIBTIFF_MICRO_VERSION),' $(top_srcdir)/libtiff/tiffvers.h.in > $(top_builddir)/libtiff/tiffvers.h && sed -i 's,@,,g' $(top_builddir)/libtiff/tiffvers.h)
+JBIG_DEPENDENT_TESTSCRIPTS=\
+	tiffcp-lzw-single-strip-jbig.sh
 
-pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = libtiff-4.pc
+if HAVE_JBIG
+if TIFF_TOOLS
+JBIG_DEPENDENT_TESTSCRIPTS_TO_RUN=$(JBIG_DEPENDENT_TESTSCRIPTS)
+endif
+else
+JBIG_DEPENDENT_TESTSCRIPTS_TO_RUN=
+endif
 
-# Special rules to assist with Coverity submissions.
-PACKAGE_CHANGE_DATE=`awk '/^[0-9][0-9][0-9][0-9]-[0-9][0-9]-[0-9][0-9]/ { print substr($$1,1,4) substr($$1,6,2) substr($$1,9,2); exit; }' $(top_srcdir)/ChangeLog`
-COVERITY_EMAIL=bfriesen@simple.dallas.tx.us
-COVERITY_TARBALL=libtiff.xz
-COVERITY_VERSION=devel-${PACKAGE_CHANGE_DATE}
-COVERITY_DESCRIPTION='libtiff development'
-coverity:
-	$(MAKE) clean
-	cov-build --dir cov-int $(MAKE)
-	tar caf $(COVERITY_TARBALL) cov-int
-	curl --limit-rate 50K \
-	--form token=`cat $$HOME/.coverity_key_tiff` \
-	--form email=$(COVERITY_EMAIL) \
-	--form file=@$(COVERITY_TARBALL) \
-	--form version=$(COVERITY_VERSION) \
-	--form description=$(COVERITY_DESCRIPTION) \
-	https://scan.coverity.com/builds?project=tiff
-	$(RM) $(COVERITY_TARBALL)
+if BUILD_STATIC
+STATIC_CHECK_PROGS=rational_precision2double test_write_read_tags test_transferfunction_write_read
+endif
+
+# Executable programs which need to be built in order to support tests
+if TIFF_TESTS
+check_PROGRAMS = \
+	ascii_tag long_tag short_tag strip_rw rewrite custom_dir custom_dir_EXIF_231 \
+	defer_strile_loading defer_strile_writing test_directory test_IFD_enlargement test_open_options \
+	test_append_to_strip test_ifd_loop_detection testtypes test_signed_tags $(JPEG_DEPENDENT_CHECK_PROG) $(STATIC_CHECK_PROGS)
+endif
+
+# Test scripts to execute
+BASE_TESTSCRIPTS = \
+	ppm2tiff_pbm.sh \
+	ppm2tiff_pgm.sh \
+	ppm2tiff_ppm.sh \
+	fax2tiff.sh \
+	tiffcp-g3.sh \
+	tiffcp-g3-1d.sh \
+	tiffcp-g3-1d-fill.sh \
+	tiffcp-g3-2d.sh \
+	tiffcp-g3-2d-fill.sh \
+	tiffcp-g4.sh \
+	tiffcp-logluv.sh \
+	tiffcp-thumbnail.sh \
+	tiffcp-lzw-compat.sh \
+	tiffcp-lzw-scanline-decode.sh \
+	tiffdump.sh \
+	tiffinfo.sh \
+	tiffcp-split.sh \
+	tiffcp-split-join.sh \
+	tiff2ps-PS1.sh \
+	tiff2ps-PS2.sh \
+	tiff2ps-PS3.sh \
+	tiff2ps-EPS1.sh \
+	tiff2pdf.sh \
+	tiffcrop-doubleflip-logluv-3c-16b.sh \
+	tiffcrop-doubleflip-minisblack-1c-16b.sh \
+	tiffcrop-doubleflip-minisblack-1c-8b.sh \
+	tiffcrop-doubleflip-minisblack-2c-8b-alpha.sh \
+	tiffcrop-doubleflip-miniswhite-1c-1b.sh \
+	tiffcrop-doubleflip-palette-1c-1b.sh \
+	tiffcrop-doubleflip-palette-1c-4b.sh \
+	tiffcrop-doubleflip-palette-1c-8b.sh \
+	tiffcrop-doubleflip-rgb-3c-16b.sh \
+	tiffcrop-doubleflip-rgb-3c-8b.sh \
+	tiffcrop-extract-logluv-3c-16b.sh \
+	tiffcrop-extract-minisblack-1c-16b.sh \
+	tiffcrop-extract-minisblack-1c-8b.sh \
+	tiffcrop-extract-minisblack-2c-8b-alpha.sh \
+	tiffcrop-extract-miniswhite-1c-1b.sh \
+	tiffcrop-extract-palette-1c-1b.sh \
+	tiffcrop-extract-palette-1c-4b.sh \
+	tiffcrop-extract-palette-1c-8b.sh \
+	tiffcrop-extract-rgb-3c-16b.sh \
+	tiffcrop-extract-rgb-3c-8b.sh \
+	tiffcrop-extractz14-logluv-3c-16b.sh \
+	tiffcrop-extractz14-minisblack-1c-16b.sh \
+	tiffcrop-extractz14-minisblack-1c-8b.sh \
+	tiffcrop-extractz14-minisblack-2c-8b-alpha.sh \
+	tiffcrop-extractz14-miniswhite-1c-1b.sh \
+	tiffcrop-extractz14-palette-1c-1b.sh \
+	tiffcrop-extractz14-palette-1c-4b.sh \
+	tiffcrop-extractz14-palette-1c-8b.sh \
+	tiffcrop-extractz14-rgb-3c-16b.sh \
+	tiffcrop-extractz14-rgb-3c-8b.sh \
+	tiffcrop-R90-logluv-3c-16b.sh \
+	tiffcrop-R90-minisblack-1c-16b.sh \
+	tiffcrop-R90-minisblack-1c-8b.sh \
+	tiffcrop-R90-minisblack-2c-8b-alpha.sh \
+	tiffcrop-R90-miniswhite-1c-1b.sh \
+	tiffcrop-R90-palette-1c-1b.sh \
+	tiffcrop-R90-palette-1c-4b.sh \
+	tiffcrop-R90-palette-1c-8b.sh \
+	tiffcrop-R90-rgb-3c-16b.sh \
+	tiffcrop-R90-rgb-3c-8b.sh \
+	tiff2bw-palette-1c-8b.sh \
+	tiff2bw-quad-lzw-compat.sh \
+	tiff2bw-rgb-3c-8b.sh \
+	tiff2rgba-logluv-3c-16b.sh \
+	tiff2rgba-minisblack-1c-16b.sh \
+	tiff2rgba-minisblack-1c-8b.sh \
+	tiff2rgba-minisblack-2c-8b-alpha.sh \
+	tiff2rgba-miniswhite-1c-1b.sh \
+	tiff2rgba-palette-1c-1b.sh \
+	tiff2rgba-palette-1c-4b.sh \
+	tiff2rgba-palette-1c-8b.sh \
+	tiff2rgba-rgb-3c-16b.sh \
+	tiff2rgba-rgb-3c-8b.sh \
+	testfax4.sh \
+	testfax3_bug_513.sh \
+	testdeflatelaststripextradata.sh
+
+TESTSCRIPTS =$(BASE_TESTSCRIPTS) \
+	$(JPEG_DEPENDENT_TESTSCRIPTS) \
+	$(JBIG_DEPENDENT_TESTSCRIPTS)
+
+if TIFF_TOOLS
+TESTSCRIPTS_TO_RUN=$(BASE_TESTSCRIPTS) \
+	$(JPEG_DEPENDENT_TESTSCRIPTS_TO_RUN) \
+	$(JBIG_DEPENDENT_TESTSCRIPTS_TO_RUN)
+else
+TESTSCRIPTS_TO_RUN=
+endif
+
+# This list should contain the references files
+# from the 'refs' subdirectory
+REFFILES = \
+	refs/o-tiff2ps-EPS1.ps \
+	refs/o-tiff2ps-PS1.ps \
+	refs/o-tiff2ps-PS2.ps \
+	refs/o-tiff2ps-PS3.ps \
+	refs/o-testfax4.tiff \
+	refs/o-testfax3_bug_513.tiff \
+	refs/o-deflate-last-strip-extra-data.tiff
+
+# This list should contain all of the TIFF files in the 'images'
+# subdirectory which are intended to be used as input images for
+# tests.  All of these files should use the extension ".tiff".
+TIFFIMAGES = \
+	images/logluv-3c-16b.tiff \
+	images/minisblack-1c-16b.tiff \
+	images/minisblack-1c-8b.tiff \
+	images/minisblack-2c-8b-alpha.tiff \
+	images/miniswhite-1c-1b.tiff \
+	images/palette-1c-1b.tiff \
+	images/palette-1c-4b.tiff \
+	images/palette-1c-8b.tiff \
+	images/rgb-3c-16b.tiff \
+	images/rgb-3c-8b.tiff \
+	images/quad-tile.jpg.tiff \
+	images/quad-lzw-compat.tiff \
+	images/lzw-single-strip.tiff \
+	images/ojpeg_zackthecat_subsamp22_single_strip.tiff \
+	images/ojpeg_chewey_subsamp21_multi_strip.tiff \
+	images/ojpeg_single_strip_no_rowsperstrip.tiff \
+	images/testfax4.tiff \
+	images/deflate-last-strip-extra-data.tiff \
+	images/custom_dir_EXIF_GPS.tiff \
+	images/testfax3_bug_513.tiff \
+	images/32bpp-None.tiff
+
+PNMIMAGES = \
+	images/minisblack-1c-8b.pgm \
+	images/miniswhite-1c-1b.pbm \
+	images/rgb-3c-16b.ppm \
+	images/rgb-3c-8b.ppm
+
+# This list should include all of the files in the 'images'
+# subdirectory which are intended to be distributed.  This may include
+# files which are not currently used by the tests.
+IMAGES_EXTRA_DIST = \
+	images/README.txt \
+	images/miniswhite-1c-1b.g3 \
+	images/test_float64_predictor2_le_lzw.tif \
+	images/test_float64_predictor2_be_lzw.tif \
+	images/tiff_with_subifd_chain.tif \
+	images/test_ifd_loop_to_self.tif \
+	images/test_ifd_loop_to_first.tif \
+	images/test_two_ifds.tif \
+	images/test_ifd_loop_subifd.tif \
+	images/webp_lossless_rgba_alpha_fully_opaque.tif \
+	images/32bpp-None-jpeg.tiff \
+	$(PNMIMAGES) \
+	$(TIFFIMAGES)
+
+noinst_HEADERS = tifftest.h
+
+test_signed_tags_SOURCES = test_signed_tags.c
+test_signed_tags_LDADD = $(LIBTIFF)
+ascii_tag_SOURCES = ascii_tag.c
+ascii_tag_LDADD = $(LIBTIFF)
+long_tag_SOURCES = long_tag.c check_tag.c
+long_tag_LDADD = $(LIBTIFF)
+short_tag_SOURCES = short_tag.c check_tag.c
+short_tag_LDADD = $(LIBTIFF)
+strip_rw_SOURCES = strip_rw.c strip.c test_arrays.c test_arrays.h
+strip_rw_LDADD = $(LIBTIFF)
+rewrite_SOURCES = rewrite_tag.c
+rewrite_LDADD = $(LIBTIFF)
+raw_decode_SOURCES = raw_decode.c
+raw_decode_LDADD = $(LIBTIFF)
+custom_dir_SOURCES = custom_dir.c
+custom_dir_LDADD = $(LIBTIFF)
+
+if BUILD_STATIC
+rational_precision2double_SOURCES = rational_precision2double.c
+rational_precision2double_LDADD = $(LIBTIFF)
+rational_precision2double_LDFLAGS = -static
+
+test_write_read_tags_SOURCES = test_write_read_tags.c
+test_write_read_tags_LDADD = $(LIBTIFF)
+test_write_read_tags_LDFLAGS = -static
+
+test_transferfunction_write_read_SOURCES = test_transferfunction_write_read.c
+test_transferfunction_write_read_LDADD = $(LIBTIFF)
+test_transferfunction_write_read_LDFLAGS = -static
+endif
+
+custom_dir_EXIF_231_SOURCES = custom_dir_EXIF_231.c
+custom_dir_EXIF_231_LDADD = $(LIBTIFF)
+defer_strile_loading_SOURCES = defer_strile_loading.c
+defer_strile_loading_LDADD = $(LIBTIFF)
+defer_strile_writing_SOURCES = defer_strile_writing.c
+defer_strile_writing_LDADD = $(LIBTIFF)
+test_directory_SOURCES = test_directory.c
+test_directory_LDADD = $(LIBTIFF)
+test_IFD_enlargement_SOURCES = test_IFD_enlargement.c
+test_IFD_enlargement_LDADD = $(LIBTIFF)
+test_open_options_SOURCES = test_open_options.c
+test_open_options_LDADD = $(LIBTIFF)
+test_append_to_strip_SOURCES = test_append_to_strip.c
+test_append_to_strip_LDADD = $(LIBTIFF)
+test_ifd_loop_detection_CFLAGS = -DSOURCE_DIR=\"@srcdir@\"
+test_ifd_loop_detection_SOURCES = test_ifd_loop_detection.c
+test_ifd_loop_detection_LDADD = $(LIBTIFF)
+
+AM_CPPFLAGS = -I$(top_srcdir)/libtiff
+
+# memcheck: valgrind's memory access checker.
+#
+# The suppressions which come with valgrind are sometimes insufficient
+# to handle certain system library aspects which may be reported and
+# which are unrelated to libtiff.  When first starting with a new
+# system (or after a major system update), it is good to execute the
+# test suite (known to already be passing!) like 'make memcheck
+# VALGRIND_EXTRA_OPTS=--gen-suppressions=all' to create valgrind
+# suppression entries in the test log.  Make sure that none of the
+# suppressions are due to libtiff itself.  Tell valgrind about the
+# suppressions by creating a .valgrindrc file with content like:
+# --memcheck:suppressions=mysupp.supp
+memcheck:
+	$(MAKE) MEMCHECK='valgrind --tool=memcheck --leak-check=full --read-var-info=yes \
+	--error-exitcode=2 --track-origins=yes --num-callers=12 \
+	--quiet $(VALGRIND_EXTRA_OPTS)' check
+
+# ptrcheck: valgrind's experimental pointer checking tool.
+ptrcheck:
+	$(MAKE) MEMCHECK='valgrind --tool=exp-ptrcheck --quiet $(VALGRIND_EXTRA_OPTS)' check
+
+# tiff2bw is pretty lame so currently only the generated scripts
+# tiff2bw-palette-1c-8b.sh, tiff2bw-quad-lzw-compat.sh, and
+# tiff2bw-rgb-3c-8b.sh pass tests.
+generate-tiff2bw-tests:
+	for file in $(TIFFIMAGES) ; \
+	do \
+	base=`basename $$file .tiff` ; \
+	testscript=$(srcdir)/tiff2bw-$$base.sh ; \
+	( \
+	  echo "#!/bin/sh" ; \
+	  echo "# Generated file, master is Makefile.am" ; \
+	  echo ". \$${srcdir:-.}/common.sh" ; \
+	  echo "infile=\"\$$srcdir/$$file\"" ; \
+	  echo "outfile=\"o-tiff2bw-$$base.tiff\"" ; \
+	  echo "f_test_convert \"\$$TIFF2BW\" \$$infile \$$outfile" ; \
+	  echo "f_tiffinfo_validate \$$outfile" ; \
+	) > $$testscript ; \
+	chmod +x $$testscript ; \
+	done
+
+generate-tiff2rgba-tests:
+	for file in $(TIFFIMAGES) ; \
+	do \
+	base=`basename $$file .tiff` ; \
+	testscript=$(srcdir)/tiff2rgba-$$base.sh ; \
+	( \
+	  echo "#!/bin/sh" ; \
+	  echo "# Generated file, master is Makefile.am" ; \
+	  echo ". \$${srcdir:-.}/common.sh" ; \
+	  echo "infile=\"\$$srcdir/$$file\"" ; \
+	  echo "outfile=\"o-tiff2rgba-$$base.tiff\"" ; \
+	  echo "f_test_convert \"\$$TIFF2RGBA\" \$$infile \$$outfile" ; \
+	  echo "f_tiffinfo_validate \$$outfile" ; \
+	) > $$testscript ; \
+	chmod +x $$testscript ; \
+	done
+
+# Test rotations
+generate-tiffcrop-R90-tests:
+	for file in $(TIFFIMAGES) ; \
+	do \
+	base=`basename $$file .tiff` ; \
+	testscript=$(srcdir)/tiffcrop-R90-$$base.sh ; \
+	( \
+	  echo "#!/bin/sh" ; \
+	  echo "# Generated file, master is Makefile.am" ; \
+	  echo ". \$${srcdir:-.}/common.sh" ; \
+	  echo "infile=\"\$$srcdir/$$file\"" ; \
+	  echo "outfile=\"o-tiffcrop-R90-$$base.tiff\"" ; \
+	  echo "f_test_convert \"\$$TIFFCROP -R90\" \$$infile \$$outfile" ; \
+	  echo "f_tiffinfo_validate \$$outfile" ; \
+	) > $$testscript ; \
+	chmod +x $$testscript ; \
+	done
+
+# Test flip (mirror)
+generate-tiffcrop-doubleflip-tests:
+	for file in $(TIFFIMAGES) ; \
+	do \
+	base=`basename $$file .tiff` ; \
+	testscript=$(srcdir)/tiffcrop-doubleflip-$$base.sh ; \
+	( \
+	  echo "#!/bin/sh" ; \
+	  echo "# Generated file, master is Makefile.am" ; \
+	  echo ". \$${srcdir:-.}/common.sh" ; \
+	  echo "infile=\"\$$srcdir/$$file\"" ; \
+	  echo "outfile=\"o-tiffcrop-doubleflip-$$base.tiff\"" ; \
+	  echo "f_test_convert \"\$$TIFFCROP -F both\" \$$infile \$$outfile" ; \
+	  echo "f_tiffinfo_validate \$$outfile" ; \
+	) > $$testscript ; \
+	chmod +x $$testscript ; \
+	done
+
+# Test extracting a section 100 pixels wide and 100 pixels high
+generate-tiffcrop-extract-tests:
+	for file in $(TIFFIMAGES) ; \
+	do \
+	base=`basename $$file .tiff` ; \
+	testscript=$(srcdir)/tiffcrop-extract-$$base.sh ; \
+	( \
+	  echo "#!/bin/sh" ; \
+	  echo "# Generated file, master is Makefile.am" ; \
+	  echo ". \$${srcdir:-.}/common.sh" ; \
+	  echo "infile=\"\$$srcdir/$$file\"" ; \
+	  echo "outfile=\"o-tiffcrop-extract-$$base.tiff\"" ; \
+	  echo "f_test_convert \"\$$TIFFCROP -U px -E top -X 60 -Y 60\" \$$infile \$$outfile" ; \
+	  echo "f_tiffinfo_validate \$$outfile" ; \
+	) > $$testscript ; \
+	chmod +x $$testscript ; \
+	done
+
+# Test extracting the first and fourth quarters from the left side.
+generate-tiffcrop-extractz14-tests:
+	for file in $(TIFFIMAGES) ; \
+	do \
+	base=`basename $$file .tiff` ; \
+	testscript=$(srcdir)/tiffcrop-extractz14-$$base.sh ; \
+	( \
+	  echo "#!/bin/sh" ; \
+	  echo "# Generated file, master is Makefile.am" ; \
+	  echo ". \$${srcdir:-.}/common.sh" ; \
+	  echo "infile=\"\$$srcdir/$$file\"" ; \
+	  echo "outfile=\"o-tiffcrop-extractz14-$$base.tiff\"" ; \
+	  echo "f_test_convert \"\$$TIFFCROP -E left -Z1:4,2:4\" \$$infile \$$outfile" ; \
+	  echo "f_tiffinfo_validate \$$outfile" ; \
+	) > $$testscript ; \
+	chmod +x $$testscript ; \
+	done
+
+generate-tiffcrop-tests: \
+	generate-tiffcrop-R90-tests \
+	generate-tiffcrop-doubleflip-tests \
+	generate-tiffcrop-extract-tests \
+	generate-tiffcrop-extractz14-tests
+
+generate-tests: \
+	generate-tiff2bw-tests \
+	generate-tiff2rgba-tests \
+	generate-tiffcrop-tests
